[gd_scene load_steps=2 format=3 uid="uid://css22a2nom2eo"]

[ext_resource type="Script" path="res://Entities/HiddenTileCollider/hidden_tile_collider.gd" id="1_1cobp"]

[node name="HiddenTileCollider" type="Area2D"]
position = Vector2(0, -6)
collision_layer = 0
collision_mask = 16
script = ExtResource("1_1cobp")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
